add orion v5.5